Adicionando logo CSADV

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <header id="header" >      
       <nav class= "container ">
-        <a class = "logo" href="#"><img src="https://le-cdn.hibuwebsites.com/7c3f28ba35b64be89528c20f5ec20886/dms3rep/multi/opt/Logo-327w.png" 
-        alt=""></a>       
+        <a class = "logo" href="#"><img src="assets/images/logo.svg" 
+        alt="CSADV"></a>       
         <!-- Menu -->
         <div class="menu">
           <ul class="grid">
@@ -160,11 +160,9 @@
           </div>                      
             <div class="links">
               <ul class="grid">
-                <li><i class="icon-whatsapp"></i>(61) 3314-9600</li>
-                <li><i class="icon-map-pin"></i>SAUS Quadra 5 Bloco J Lote 3 - Edifício CFC <br>
-                  Asa Sul - Brasília/DF <br>
-                  CEP: 70070-920</li>
-                <li><i class="icon-mail"></i>cfc@cfc.org.br</li>
+                <li><i class="icon-whatsapp"></i>(61) 98261-0776</li>
+                <li><i class="icon-map-pin"></i>Valparaíso de Goiás - GO</li>
+                <li><i class="icon-mail"></i>csadvdf@gmail.com</li>
               </ul>
             </div>
         </div>    
@@ -177,7 +175,7 @@
       <div class="container grid">
         <div class="brand">
           <a class = "logo logo-alt" href="#">
-            <img src="https://le-cdn.hibuwebsites.com/7c3f28ba35b64be89528c20f5ec20886/dms3rep/multi/opt/Logo-327w.png"
+            <img src="assets/images/logo.svg"
             alt="CFC - conselho federal de contabilidade">
           </a>
           <p>@2021 BeautySalon.</p>              
@@ -185,7 +183,7 @@
         </div>
 
         <div class="social grid">
-          <a target='_blank' href="https://instagram.com"><i class="icon-instagram"></i></a>
+          <a target='_blank' href="https://www.instagram.com/csadv.advocacia/"><i class="icon-instagram"></i></a>
           <a target='_blank' href="https://facebook.com"><i class="icon-facebook"></i></a>
           <a target='_blank' href="https://youtube.com"><i class="icon-youtube"></i></a>                            
         </div>
